--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">MSMS</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_movies">SRSYS: Movies</string>
+    <string name="title_activity_users">SRSYS: Users</string>
+    <string name="title_activity_add">SRSYS: Add</string>
     <string name="title_movies">Movies</string>
     <string name="title_users">Users</string>
     <string name="title_add">Add</string>
+    <string name="fatalError">Fatal error</string>
+    <string name="warning">Warning</string>
 </resources>
