--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">MSMS</string>
-    <string name="title_activity_movies">SRSYS: Movies</string>
-    <string name="title_activity_users">SRSYS: Users</string>
-    <string name="title_activity_add">SRSYS: Add</string>
+    <string name="title_activity_movies">MSMS: Movies</string>
+    <string name="title_activity_users">MSMS: Users</string>
+    <string name="title_activity_add">MSMS: Add</string>
+    <string name="title_activity_movie_info">MSMS: Movie Info</string>
+    <string name="title_activity_user_info">MSMS: User Info</string>
     <string name="title_movies">Movies</string>
     <string name="title_users">Users</string>
     <string name="title_add">Add</string>
