Finished function for AddMovieActivity
AddMovieActivity will now pass the new movie object back to MovieListActivity and add that movie to the database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="movie_name">Name:</string>
     <string name="movie_category">Category 1:</string>
     <string name="ok">OK</string>
+    <string name="back">Back</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
     <string name="movie_category2">Category 2:</string>
     <string name="movie_category3">Category 3:</string>
     <string name="movie_license">License Expiration Date (M/D/Y):</string>
