--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="movie_description">Description:</string>
     <string name="movie_description_hint">What is the movie about?</string>
     <string name="movie_release_hint">YYYY</string>
+    <string name="movie_search_hint">Search Movies</string>
 </resources>
