Added menu for choosing sort order
ADDITIONS:
+ Added an options menu to the ToolBar in acivity_movie_list.xml to select a movie sorting order
DELETIONS:
- listview_main.xml and navigation.xml are unused

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="reports">reports</string>
     <string name="movie_id">Movie ID:</string>
     <string name="movie_id_hint">Unique integer</string>
+    <string name="sort_ascending">Ascending</string>
+    <string name="sort_descending">Descending</string>
+    <string name="sort_none">Unsorted</string>
 </resources>
