Changed Score Spinner to Text Box
DELETIONS:
- Removed score spinner and supporting code from Movie Display Activity
ADDITIONS:
+ Added a TextView UI widget and supporting code to Movie Display Activity. This text box simply displays the average score of the current movie.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="movie_category3">Category 3:</string>
     <string name="movie_license">License Expiration Date (M/D/Y):</string>
     <string name="movie_release">Release Year:</string>
-    <string name="movie_score">Score:</string>
+    <string name="movie_score">Average Score:</string>
     <string name="movie_description">Description:</string>
     <string name="movie_description_hint">What is the movie about?</string>
     <string name="movie_release_hint">YYYY</string>
